--- a/machine.html
+++ b/machine.html
@@ -168,7 +168,7 @@ team at Vimeo is building AI-driven tools to help anyone who wants to make a?...
 <p>1 day ago ... Description. Machine Learning / Artificial Intelligence Engineer. Are you ready for 
 a career change to somewhere where you can really make a difference,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/oNrsafwA'>Numbrs Personal Finance AG Careers - Machine Learning Engineer ...</a></h5> 
+<h5><a href='https://jobs.jobvite.com/centralway/job/oNrsafwA'>Numbrs Personal Finance AG Careers - Machine Learning Engineer ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Numbrs engineers are innovators, problem-solvers, and hard-workers who are 
 building solutions in big data, mobile technology and much more. We look for?...</p>
@@ -211,7 +211,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twilio/jobs/1786624'>Job Application for Principal Software Machine Learning Engineer at Twilio</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1786624'>Job Application for Principal Software Machine Learning Engineer at Twilio</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -219,7 +219,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://riskmethods.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d) - Apply online</a></h5> 
+<h5><a href='https://riskmethods.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d) - Apply online</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -271,7 +271,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C'>Atypon Systems - Jobs: Machine Learning / AI / Big Data Engineer, Athens - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C'>Atypon Systems - Jobs: Machine Learning / AI / Big Data Engineer, Athens - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -288,7 +288,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -309,16 +309,16 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twilio/jobs/1774156'>Job Application for Senior Machine Learning Engineer at Twilio</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1774156'>Job Application for Senior Machine Learning Engineer at Twilio</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/getdor/25a3741b-ed30-4d41-80b9-075573ab5c32'>Dor - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/getdor/25a3741b-ed30-4d41-80b9-075573ab5c32'>Dor - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Machine Learning Engineer. San Francisco. Engineering. Full-time. Apply for this 
 job. Dor is a retail analytics startup that uses a first-of-its-kind hardware and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999691878102-intern-data-science-m-f-d-machine-learning-model-compression'>E. Breuninger GmbH &amp; Co. Intern Data Science (m/f/d) Machine Learning / Model Compression | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999691878102-intern-data-science-m-f-d-machine-learning-model-compression'>E. Breuninger GmbH &amp; Co. Intern Data Science (m/f/d) Machine Learning / Model Compression | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -326,7 +326,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/F9C7D91FB2'>SmartNews, Inc. - Jobs: Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/F9C7D91FB2'>SmartNews, Inc. - Jobs: Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -368,17 +368,17 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/b6d1de19-5e8c-4372-a234-48d3566f29f0'>Criteo - Lead Developer - Software Engineering &amp; Machine Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/criteo/b6d1de19-5e8c-4372-a234-48d3566f29f0'>Criteo - Lead Developer - Software Engineering &amp; Machine Learning</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://relimetricsinc.recruitee.com/o/computer-vision-and-machine-learning-engineer-mfd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relimetricsinc.recruitee.com/o/computer-vision-and-machine-learning-engineer-mfd'>
       Computer Vision and Machine Learning Engineer (m/f/d) - Relimetrics, Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://newasurion.referrals.selectminds.com/jobs/machine-learning-engineer-6309'>Machine Learning Engineer - Asurion Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://newasurion.referrals.selectminds.com/jobs/machine-learning-engineer-6309'>Machine Learning Engineer - Asurion Careers</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -455,7 +455,7 @@ and data scientists working inside MSK. Our mission is to transform how?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://mercari.workable.com/j/DEB330A0B9'>Mercari, inc. - Jobs: Software Engineer, Machine Learning [New Graduate Position] - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mercari.workable.com/j/DEB330A0B9'>Mercari, inc. - Jobs: Software Engineer, Machine Learning [New Graduate Position] - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -467,13 +467,13 @@ and data scientists working inside MSK. Our mission is to transform how?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/jingchicorp/jobs/1344030'>Job Application for Machine Learning Engineer at WeRide.ai</a></h5> 
+<h5><a href='https://boards.greenhouse.io/jingchicorp/jobs/1344030'>Job Application for Machine Learning Engineer at WeRide.ai</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Machine Learning Engineer. WeRide.ai is looking for world class machine 
 learning engineer to take challenges in the area of mobility solutions. Your work 
 are?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
